Bug 1923080 - Increase window min-width for vertical tabs mode to prevent toolbar overlap r=sidebar-reviewers,desktop-theme-reviewers,kcochrane,sfoster
- follow up patch to increase width on Windows and Linux specifically

Differential Revision: https://phabricator.services.mozilla.com/D226659

--- a/browser/themes/shared/browser-shared.css
+++ b/browser/themes/shared/browser-shared.css
@@ -53,7 +53,11 @@ body {
 
     /* stylelint-disable-next-line media-query-no-invalid */
     @media (-moz-bool-pref: "sidebar.verticalTabs") {
-      min-width: 670px;
+      min-width: 800px;
+
+      @media (-moz-platform: macos) {
+        min-width: 670px;
+      }
     }
   }
 
